#296 Status should be colored for kcctl get connectors (#301)